track SDP parse errors

SDP parse errors were not tracked in chrome://webrtc-internals

BUG=677550

Review-Url: https://codereview.chromium.org/2622453002
Cr-Commit-Position: refs/heads/master@{#442228}

Former-commit-id: 36722c63d70844654fc8d04a2aca71729c7365e5